--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>My shaandaar todolist</title>
+        <title>Hamza Todo_list</title>
         <style>
             a {
                 text-decoration: none;
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>GNA Students are Super Duper Awesome</h1>
+        <h1>Welcome to Hamza Todo_list</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
@@ -27,7 +27,7 @@
 
         <form action="/todo/add/" method="post">
             <p>
-                <label for="newtodo">What shoud I do?</label>
+                <label for="newtodo">Type You list here</label>
                 <input type="text" name="newtodo" id="newtodo" autofocus />
                 <input type="submit" value="Add" />
             </p>
